# ResiliAI

./: CLAIMS_ACCURACY_UPDATES.txt  Dockerfile  FIX_PROMPT.txt  MASTER_PROJECT_REPORT.txt  README.md  TECHNICAL_DOCUMENTATION.md  agent_rule.py  api.py  app.py  benchmark.py  client.py  demo_script.txt  final_phase_validation.sh  fix_inference_format.py  full_strict_validation.sh  inference.py  inference_backup.py  inference_phase1_backup.py  inference_phase2_backup.py  inference_phase4_backup.py  models.py  multi_agent.py  openai.py  openenv.yaml  pyproject.toml  quick_start.sh  requirements.txt  robustness_test.py  run_all.py  sre_environment.py  sre_openenv.py  validate_tasks.py
.tmp_phase2/: openai.py  path1.out  run.json  sitecustomize.py
.tmp_validation/: validator_test.py
frontend/: app.py
frontend/.streamlit/: config.toml
graders/: easy_grader.py  hard_grader.py  medium_grader.py
models/: dqn_model.pth
scripts/: apply_polish.py  apply_stage5.py  demo_runner.py  validate_tasks.py
server/: app.py
src/: __init__.py
src/agents/: agent_rule.py  multi_agent.py
src/env/: __init__.py  sre_environment.py  sre_openenv.py
src/evaluation/: benchmark.py  evaluation.py  metrics_and_baseline.py  robustness_test.py  test_multi_scenario.py  test_rl_agent.py  test_scenarios.py
src/inference/: inference.py
src/training/: train_dqn.py
tasks/: easy_task.py  hard_task.py  medium_task.py
